--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <!-- ✅ Banner with text -->
     <header>
         <h1>Suja D R</h1>
-        <h2>Data Analyst | Data Science Enthusiast</h2>
+        <h2>Data Analyst | Data Science </h2>
         <p>Email: <a href="mailto:sujaravichandran006@gmail.com">sujaravichandran006@gmail.com</a></p>
     </header>
 
@@ -200,4 +200,5 @@
         <p>&copy; 2025 Suja D R. All Rights Reserved.</p>
     </footer>
 </body>
+
 </html>
