--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Suja D R - Data Analyst Portfolio</title>
+    <title>Suja D R - Portfolio</title>
     <style>
         body { 
             font-family: Arial, sans-serif; 
@@ -200,4 +200,5 @@
         <p>&copy; 2025 Suja D R. All Rights Reserved.</p>
     </footer>
 </body>
+
 </html>
