--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@ footer{
 <header>
     <div>
         <h1>Suja D R</h1>
-        <h2><span id="typing"></span></h2>
-        <p>Turning Data into Decisions 🚀</p>
-        <a href="#projects" class="btn">Explore My Work</a>
+        <h2>Data Analyst | Data Science Enthusiast</h2>
+        <p>Email: <a href="mailto:sujaravichandran006@gmail.com">sujaravichandran006@gmail.com</a></p>
+        <a href="#projects" class="btn">View Projects</a>
     </div>
 </header>
 
@@ -230,13 +230,20 @@ Skilled in machine learning, data visualization, and real-world analytics projec
 </section>
 
 <section id="skills" class="reveal">
-<h2>Skills</h2>
-<div class="glass">
-<div class="skill"><span>Python <b>90%</b></span><div class="bar"><div style="width:90%"></div></div></div>
-<div class="skill"><span>SQL <b>85%</b></span><div class="bar"><div style="width:85%"></div></div></div>
-<div class="skill"><span>Power BI <b>88%</b></span><div class="bar"><div style="width:88%"></div></div></div>
-<div class="skill"><span>Machine Learning <b>80%</b></span><div class="bar"><div style="width:80%"></div></div></div>
-</div>
+    <h2>Skills</h2>
+    <div class="skills">
+        <span class="skill">Python</span>
+        <span class="skill">SQL</span>
+        <span class="skill">Power BI</span>
+        <span class="skill">Tableau</span>
+        <span class="skill">Machine Learning</span>
+        <span class="skill">CNN / RNN / LSTM</span>
+        <span class="skill">Pandas</span>
+        <span class="skill">NumPy</span>
+        <span class="skill">Streamlit</span>
+        <span class="skill">Flask</span>
+        <span class="skill">GitHub</span>
+    </div>
 </section>
 
 <!-- UPDATED PROJECTS SECTION -->
@@ -347,4 +354,5 @@ r.classList.add("active");
 
 </body>
 </html>
+
 
