--- a/index.html
+++ b/index.html
@@ -230,21 +230,32 @@ Skilled in machine learning, data visualization, and real-world analytics projec
 </section>
 
 <section id="skills" class="reveal">
-    <h2>Skills</h2>
-    <div class="skills">
-        <span class="skill">Python</span>
-        <span class="skill">SQL</span>
-        <span class="skill">Power BI</span>
-        <span class="skill">Tableau</span>
-        <span class="skill">Machine Learning</span>
-        <span class="skill">CNN / RNN / LSTM</span>
-        <span class="skill">Pandas</span>
-        <span class="skill">NumPy</span>
-        <span class="skill">Streamlit</span>
-        <span class="skill">Flask</span>
-        <span class="skill">GitHub</span>
-    </div>
+<h2>Skills</h2>
+<div class="glass">
+
+<div class="skill">
+    <span>Python</span>
+    <div class="bar"><div style="width:90%"></div></div>
+</div>
+
+<div class="skill">
+    <span>SQL</span>
+    <div class="bar"><div style="width:85%"></div></div>
+</div>
+
+<div class="skill">
+    <span>Power BI</span>
+    <div class="bar"><div style="width:88%"></div></div>
+</div>
+
+<div class="skill">
+    <span>Machine Learning</span>
+    <div class="bar"><div style="width:80%"></div></div>
+</div>
+
+</div>
 </section>
+
 
 <!-- UPDATED PROJECTS SECTION -->
 <section id="projects" class="reveal">
@@ -252,7 +263,7 @@ Skilled in machine learning, data visualization, and real-world analytics projec
 <div class="projects">
 
 <div class="project">
-<img src="<img src="https://tse4.mm.bing.net/th/id/OIP.rRSnMyQXlhmQbx_KTyISHgHaEK?pid=Api&P=0&h=180">
+<img src="<img src="https://tse1.mm.bing.net/th/id/OIP.kcsXNS-fl-iiZRqjbG9PGAHaC_?pid=Api&P=0&h=180">
 <div>
 <h3>HealthLens AI – Disease Prediction</h3>
 <p>
@@ -354,5 +365,6 @@ r.classList.add("active");
 
 </body>
 </html>
+
 
 
