--- a/index.html
+++ b/index.html
@@ -233,20 +233,30 @@ footer{
 </section>
 
 <section id="skills" class="reveal">
-    <h2>Skills</h2>
-    <div class="skills">
-        <span class="skill">Python</span>
-        <span class="skill">SQL</span>
-        <span class="skill">Power BI</span>
-        <span class="skill">Tableau</span>
-        <span class="skill">Machine Learning</span>
-        <span class="skill">CNN / RNN / LSTM</span>
-        <span class="skill">Pandas</span>
-        <span class="skill">NumPy</span>
-        <span class="skill">Streamlit</span>
-        <span class="skill">Flask</span>
-        <span class="skill">GitHub</span>
-    </div>
+<h2>Skills</h2>
+<div class="glass">
+
+<div class="skill">
+    <span>Python</span>
+    <div class="bar"><div style="width:90%"></div></div>
+</div>
+
+<div class="skill">
+    <span>SQL</span>
+    <div class="bar"><div style="width:85%"></div></div>
+</div>
+
+<div class="skill">
+    <span>Power BI</span>
+    <div class="bar"><div style="width:88%"></div></div>
+</div>
+
+<div class="skill">
+    <span>Machine Learning</span>
+    <div class="bar"><div style="width:80%"></div></div>
+</div>
+
+</div>
 </section>
 
 <section id="projects" class="reveal">
@@ -254,7 +264,7 @@ footer{
     <div class="projects">
 
         <div class="project">
-            <img src="https://tse4.mm.bing.net/th/id/OIP.rRSnMyQXlhmQbx_KTyISHgHaEK?pid=Api&P=0&h=180">
+            <img src="https://user-images.githubusercontent.com/98437584/236606241-972c82d4-15eb-4f16-9bdd-320a9b92fcc6.png">
             <div>
                 <h3>HealthLens AI – Disease Prediction</h3>
                 <p>AI-based disease prediction system using ML, Streamlit, and Power BI.</p>
@@ -320,13 +330,29 @@ footer{
     </div>
 </section>
 
-<section id="contact" class="reveal contact">
+<section id="contact" class="contact-section">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:sujaravichandran006@gmail.com">sujaravichandran006@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/suja-d-r-b25023299" target="_blank">View Profile</a></p>
-    <p>GitHub: <a href="https://github.com/suja-dr" target="_blank">github.com/suja-dr</a></p>
-    <p>Location: Chennai, India</p>
-    <a href="DRSuja_Resume.pdf" class="btn" download>Download Resume</a>
+    <p>
+        <strong>Email:</strong>
+        <a href="mailto:sujaravichandran006@gmail.com">
+            sujaravichandran006@gmail.com
+        </a>
+    </p>
+    <p>
+        <strong>LinkedIn:</strong>
+        <a href="https://www.linkedin.com/in/suja-d-r-b25023299" target="_blank">
+            View Profile
+        </a>
+    </p>
+    <p>
+        <strong>GitHub:</strong>
+        <a href="https://github.com/suja-dr" target="_blank">
+            suja-dr
+        </a>
+    </p>
+    <a href="DRSuja_Resume.pdf" class="contact-btn" download>
+        Download Resume
+    </a>
 </section>
 
 <footer>
@@ -346,3 +372,4 @@ window.addEventListener("scroll",()=>{
 
 </body>
 </html>
+
