--- a/index.html
+++ b/index.html
@@ -318,9 +318,15 @@ Streamlit web app using Logistic Regression to predict loan approval.
 <section id="contact" class="contact-section">
 <h2>Get In Touch</h2>
 <div class="contact-card">
-<p><span>Email</span><br> sujaravichandran006@gmail.com</p>
-<p><span>LinkedIn</span><br> linkedin.com/in/suja-d-r</p>
-<p><span>GitHub</span><br> github.com/suja-dr</p>
+<p><span>Email</span><br> 
+<a href="mailto:sujaravichandran006@gmail.com">sujaravichandran006@gmail.com</a>
+</p>
+<p><span>LinkedIn</span><br> 
+<a href="https://www.linkedin.com/in/suja-d-r" target="_blank">linkedin.com/in/suja-d-r</a>
+</p>
+<p><span>GitHub</span><br> 
+<a href="https://github.com/suja-dr" target="_blank">github.com/suja-dr</a>
+</p>
 <a href="DRSuja_Resume.pdf" class="resume-btn" download>⬇ Download Resume</a>
 </div>
 </section>
@@ -331,4 +337,5 @@ Streamlit web app using Logistic Regression to predict loan approval.
 
 </body>
 </html>
+
 
