--- a/index.html
+++ b/index.html
@@ -295,11 +295,11 @@ Streamlit web app using Logistic Regression to predict loan approval.
 <h2>Experience</h2>
 <div class="timeline">
 <div class="timeline-item">
-<h3>Data Science Intern – Gradtwin</h3>
+<h3>Data Science Intern – GRADTWIN SERVICES (OPC) PRIVATE LIMITED</h3>
 <p>ML models, Power BI dashboards, preprocessing.</p>
 </div>
 <div class="timeline-item">
-<h3>Data Analytics Intern – Approtech&D</h3>
+<h3>Data Analytics Intern –  APPROTECH R&D SOLUTIONS PRIVATE LIMITED </h3>
 <p>Python, Excel, Power BI, HTML.</p>
 </div>
 </div>
@@ -337,6 +337,7 @@ Streamlit web app using Logistic Regression to predict loan approval.
 
 </body>
 </html>
+
 
 
 
