--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@ machine learning, visualization, and predictive systems.
 <h2>Projects</h2>
 <div class="projects">
 
+<!-- Row 1 -->
 <div class="project">
 <img src="https://user-images.githubusercontent.com/98437584/236606241-972c82d4-15eb-4f16-9bdd-320a9b92fcc6.png">
 <div>
@@ -268,6 +269,7 @@ Predictive analytics with ML models and interactive Power BI dashboards.
 </div>
 </div>
 
+<!-- Row 2 -->
 <div class="project">
 <img src="https://user-images.githubusercontent.com/109805535/211363137-5b40a5c5-480b-418c-adfc-7ded17fc4f98.png">
 <div>
@@ -288,8 +290,20 @@ Streamlit web app using Logistic Regression to predict loan approval.
 </div>
 </div>
 
+<div class="project">
+<img src="https://tse4.mm.bing.net/th/id/OIP.yjIiygfPCKIaiKJCFeJnVQHaEK?pid=Api&P=0&h=180"> 
+<div>
+<h3>Amazon Sales Analysis – Power BI</h3>
+<p>
+Interactive Power BI dashboards analyzing Amazon sales data.
+Includes revenue trends, top-selling products, and category-wise insights.
+</p>
+</div>
+</div>
+
 </div>
 </section>
+
 
 <section id="experience">
 <h2>Experience</h2>
@@ -337,6 +351,7 @@ Streamlit web app using Logistic Regression to predict loan approval.
 
 </body>
 </html>
+
 
 
 
