--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@ footer{
 <section id="about">
 <h2>About Me</h2>
 <div class="about-box">
-BCA student at Saveetha University (CGPA 9.29) passionate about data analytics,
-machine learning, visualization, and predictive systems.
+Currently pursuing a Bachelor of Computer Applications (BCA) at Saveetha University, with an expected graduation in June 2026. My academic journey has focused on computer science, equipping me with foundational knowledge in machine learning, HTML, and Microsoft Excel. 
+Gaining practical experience as a Data Science Intern at Gradtwin while leveraging my skills in machine learning and data analysis. I am passionate about transforming data into actionable insights and am motivated to contribute to innovative projects in data analytics and science.
 </div>
 </section>
 
@@ -351,6 +351,7 @@ Includes revenue trends, top-selling products, and category-wise insights.
 
 </body>
 </html>
+
 
 
 
