--- a/index.html
+++ b/index.html
@@ -268,7 +268,8 @@ Predictive analytics with ML models and interactive Power BI dashboards.
 </p>
 </div>
 </div>
-
+</section>
+<section> 
 <!-- Row 2 -->
 <div class="project">
 <img src="https://user-images.githubusercontent.com/109805535/211363137-5b40a5c5-480b-418c-adfc-7ded17fc4f98.png">
@@ -351,6 +352,7 @@ Includes revenue trends, top-selling products, and category-wise insights.
 
 </body>
 </html>
+
 
 
 
