--- a/index.html
+++ b/index.html
@@ -269,8 +269,9 @@ Predictive analytics with ML models and interactive Power BI dashboards.
 </div>
 </div>
 </section>
-<section> 
+
 <!-- Row 2 -->
+<section id="projects" class="reveal">
 <div class="project">
 <img src="https://user-images.githubusercontent.com/109805535/211363137-5b40a5c5-480b-418c-adfc-7ded17fc4f98.png">
 <div>
@@ -352,6 +353,7 @@ Includes revenue trends, top-selling products, and category-wise insights.
 
 </body>
 </html>
+
 
 
 
