--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ Includes revenue trends, top-selling products, and category-wise insights.
 <p><span>GitHub</span><br> 
 <a href="https://github.com/suja-dr" target="_blank">github.com/suja-dr</a>
 </p>
-<a href="DRSuja_Resume.pdf" class="resume-btn" download>⬇ Download Resume</a>
+<a href="Suja_DR_Resume.pdf" class="resume-btn" download>⬇ Download Resume</a>
 </div>
 </section>
 
@@ -352,6 +352,7 @@ Includes revenue trends, top-selling products, and category-wise insights.
 
 </body>
 </html>
+
 
 
 
