--- a/index.html
+++ b/index.html
@@ -92,11 +92,12 @@ section h2{
 }
 
 /* PROJECTS */
-.projects{
-    display:grid;
-    grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-    gap:25px;
+.projects {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* 3 projects per row */
+    gap: 25px;
 }
+
 .project{
     background:rgba(255,255,255,0.06);
     border-radius:15px;
@@ -352,6 +353,7 @@ Includes revenue trends, top-selling products, and category-wise insights.
 
 </body>
 </html>
+
 
 
 
